--- a/server/models/UHealthCNN.ipynb
+++ b/server/models/UHealthCNN.ipynb
@@ -21,70 +21,18 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Found 6326 images belonging to 4 classes.\n",
-            "Found 771 images belonging to 4 classes.\n",
-            "Found 38 images belonging to 4 classes.\n"
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+            "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+            "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+            "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
           ]
         }
       ],
-      "source": [
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-        "\n",
-        "train_path = \"../data/train\"\n",
-        "\n",
-        "test_path = \"../data/test\"\n",
-        "\n",
-        "val_path = \"../data/val\"\n",
-        "\n",
-        "w, h = 244, 244\n",
-        "batch_size = 32\n",
-        "\n",
-        "train_img_gen = ImageDataGenerator(\n",
-        "    rescale=1./255,\n",
-        "    zoom_range=0.05,\n",
-        "    rotation_range=15,\n",
-        "    width_shift_range=0.1,\n",
-        "    height_shift_range=0.1  ,\n",
-        "    horizontal_flip=True,\n",
-        "    validation_split=0.2\n",
-        ")\n",
-        "\n",
-        "test_img_gen = ImageDataGenerator(\n",
-        "    rescale=1./255\n",
-        ")\n",
-        "\n",
-        "val_img_gen = ImageDataGenerator(\n",
-        "    rescale=1./255\n",
-        ")\n",
-        "\n",
-        "train_dataset = train_img_gen.flow_from_directory(\n",
-        "    train_path,\n",
-        "    target_size=(w, h),\n",
-        "    batch_size=batch_size,\n",
-        "    class_mode='categorical',\n",
-        "    shuffle=True\n",
-        ")\n",
-        "train_dataset.classes\n",
-        "\n",
-        "test_dataset = test_img_gen.flow_from_directory(\n",
-        "    test_path,\n",
-        "    target_size=(w, h),\n",
-        "    batch_size=batch_size,\n",
-        "    class_mode='categorical',\n",
-        "    shuffle=False\n",
-        ")\n",
-        "\n",
-        "val_dataset = val_img_gen.flow_from_directory(\n",
-        "    val_path,\n",
-        "    target_size=(w, h),\n",
-        "    batch_size=batch_size,\n",
-        "    class_mode='categorical',\n",
-        "    shuffle=False\n",
-        ")"
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
@@ -109,7 +57,35 @@
         }
       ],
       "source": [
-        "train_dataset.class_indices"
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "w, h = 244, 244\n",
+        "batch_size = 32\n",
+        "\n",
+        "data_augmentation = tf.keras.Sequential([\n",
+        "    layers.RandomContrast(0.1),\n",
+        "    layers.RandomRotation(0.1),\n",
+        "    layers.RandomZoom(0.2),\n",
+        "    layers.RandomTranslation(height_factor=0.1, width_factor=0.1),\n",
+        "])\n",
+        "\n",
+        "def augment_with_layers(image, label):\n",
+        "    image = data_augmentation(image)\n",
+        "    return image, label\n",
+        "\n",
+        "def resize(image, label):\n",
+        "  image = tf.image.resize(image, (w, h))\n",
+        "  return image, label\n",
+        "\n",
+        "train_ds = (\n",
+        "    tf.data.Dataset.from_tensor_slices((X_train, y_train))\n",
+        "    .shuffle(buffer_size=len(X_train))\n",
+        "    .map(resize, num_parallel_calls=tf.data.AUTOTUNE)  # Resize + normalize\n",
+        "    .map(augment_with_layers, num_parallel_calls=tf.data.AUTOTUNE)  # Optional\n",
+        "    .batch(32)\n",
+        "    .prefetch(tf.data.AUTOTUNE)\n",
+        ")\n",
+        "\n"
       ]
     },
     {
